[package]
name = "aoc20"
version = "0.1.0"
authors = ["Philip Hayes <philiphayes9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.36"
arrayvec = "0.5.2"
ascii = "1.0.0"
either = "1.6.1"
fixedbitset = "0.3.1"
petgraph = "0.5.1"
regex = { version = "1.4.2", default-features = false, features = ["perf", "std"] }
tinyset = { version = "0.4.4", default-features = false }
ndarray = "0.14.0"
